<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 上面的 layout 用于显示图像以及各种信息 -->
    <LinearLayout
        android:id="@+id/viewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/white"
        android:orientation="horizontal">

        <!-- 左边的 layout -->
        <LinearLayout
            android:id="@+id/leftLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/liveView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_weight="1"
                    android:text="@string/live_view" />

                <TextView
                    android:id="@+id/stateView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@id/liveView"
                    android:layout_weight="1"
                    android:text="未连接"
                    android:textStyle="italic"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/mission_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:hint="@string/mission_not_start"
                    android:text="用时"
                    tools:ignore="RtlHardcoded" />


                <TextView
                    android:id="@+id/targetGPS"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:text="GPS"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />


                <EditText
                    android:id="@+id/server_ip"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.80"
                    android:hint="@string/server_ip"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/batteryView"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/NA"
                    android:textColor="@color/white"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap,RtlHardcoded" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9">

                <TextureView
                    android:id="@+id/textureView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <!-- 外层view，，用来实现画图效果 -->
                <com.whu.m100.DrawView
                    android:id="@+id/drawView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

        </LinearLayout>



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

    <!-- 下面的 layout 放按钮 -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_color"
            android:text="@string/initialize"
            android:textColor="@drawable/button_font_color"
            android:textSize="14sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_color"
            android:text="@string/start_mission"
            android:textColor="@drawable/button_font_color"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_color"
            android:text="@string/land"
            android:textColor="@drawable/button_font_color"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/button4"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_bg_color"
            android:text="@string/stop_mission"
            android:textColor="@drawable/button_font_color"
            android:textSize="14sp"/>

        <ToggleButton
            android:id="@+id/mStartRecordToggleBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOn="停止"
            android:textOff="录像"/>
        <TextView
            android:id="@+id/velInfo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.48"
            android:gravity="center"
            android:hint="@string/velocity"/>

        <TextView
            android:id="@+id/heightView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:background="@color/skyblue"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>
